part2/2.04/backend-todoapp/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-todoapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend-todoapp
  template:
    metadata:
      labels:
        app: backend-todoapp
      namespace: todoapp-namespace
      name: todoapp
    spec:
      containers:
        - name: backend-todoapp
          image: akiradock/backend-todoapp
