part2/2.04/backend-todoapp/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-todoapp
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-todoapp-svc
            port:
              number: 2345
      - path: /pic
        pathType: Prefix
        backend:
          service:
            name: backend-todoapp-svc
            port:
              number: 2346
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: backend-todoapp-svc
            port:
              number: 2346
